# dialectal-twitter-maps

./: .gitignore  README.org  pip-shell.nix  pyproject.toml  requirements.txt
data/Extra/: mexico.geojson
data/aguacero/: db-aguacero-fixed.csv  db-chubasco-fixed.csv  db-tormenta-fixed.csv  mongodb-aguacero.csv  mongodb-chubasco.csv
data/automovil/: db-automovil-fixed.csv
data/automóvil/: db-coche-fixed.csv  mongodb-automovil.csv
data/bolillo/: db-birote-fixed.csv  db-bolillo-fixed.csv  mongodb-birote.csv  mongodb-bolillo.csv
data/brasier/: db-brasier-fixed.csv  db-chichero-fixed.csv  mongodb-brasier.csv  mongodb-chichero.csv
data/cinturon/: db-cinturon-fixed.csv  db-fajo-fixed.csv  (+2 more)
outputs/: WC-map.csv  aguacero-map.csv  aguacero.csv  alcoba-map.csv  anteojo-map.csv  arañazo-map.csv  asquel-map.csv  asquilin-map.csv  auto-map.csv  automovil-map.csv  automóvil.csv  birote-map.csv  bolillo-map.csv  bolillo.csv  borona-map.csv  brasier-map.csv  brasier.csv  carro-map.csv  chaquiste-map.csv  chasca-map.csv  chichero-map.csv  chinguiña-map.csv  chompipe-map.csv  chubasco-map.csv  chupaflor-map.csv  chupamirto-map.csv  chuparrosa-map.csv  cinto-map.csv  cinturon-map.csv  cinturon.csv  cinturón.csv  cobertor-map.csv  cobija-map.csv  cobija.csv  coche-map.csv  coctel de elote-map.csv  colibri-map.csv  colibri.csv  colibrí.csv  comezon-map.csv  (+50 more)
src/: cl-fetch-concept.py  cl-fixfile.py  clean-data.py  connect-to-server  execute-script  fetch-data-stream.py  fetchdb.py  fixfiles  fixplaces.py  plotmap.py  process-concept.py  process-data.py  search-tweets.py
(+134 files in other folders)
