[tool.poetry]
name = "dialectal maps generetaror"
version = "0.1.0"
description = "A tool for creating maps for discerning distinct dialects in Mexico"
authors = ["Carlos Martínez <cmartineza@ciencias.unam.mx>"]
license = "GPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-image = "^0.22.0"
requests = "^2.31.0"
pillow = "^10.2.0"
flask = "^3.0.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
